#81 #77 #71 #93 Optimize Views made all headers of views with searchable tables consistent: no useless titles (repeated from breadcrumbs), smaller titles to not use too much place, search field the same for all searchable tables/lists/trees, removed filtering in table column headers becasue it did not work (opened issue #93 to correct this or to clean this up, see TODOs)

--- a/scenarioo-client/app/styles/scenarioo.css
+++ b/scenarioo-client/app/styles/scenarioo.css
@@ -29,15 +29,27 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-    font-size: 32px;
+    font-size: 24px;
     margin: 0px 0px 20px;
 }
 
 h2 {
+    font-size: 20px;
     border-bottom: 2px #CCCCCC solid;
-    margin-top: 1.5em;
+    margin-top:0.15em;
     padding-bottom: 0.15em;
 }
+
+h3 {
+    font-size: 16px;
+    margin-top: 0.1em;
+    margin-bottom: 0.1em;
+}
+
+h4 {
+    font-size: 14px;
+}
+
 
 .icon-with-padding {
     padding-left: 5px;
@@ -173,8 +185,13 @@ h2 {
     margin-right: 10px;
 }
 
+.step-title {
+    margin: 0px;
+    padding: 0px;
+}
+
 .step-view {
-    margin: 20px 0 20px 0;
+    margin: 0 0 0 0;
     padding: 5px;
     border-radius: 3px;
 }
